# PixivAI

./: .gitignore  CMakeLists.txt  README.md
src/: AILabelPage.qml  App.qml  CMakeLists.txt  HomePage.qml  ImageDetailPage.qml  ImageSearchPage.qml  ImageSearchPagecopy.qml  MidjourneyPage.qml  ObjectDetectionPage.qml  PixivAI_en_US.ts  PixivAI_zh_CN.qm  PixivAI_zh_CN.ts  SimpleHistoryPage.qml  TestPage2.qml  ai_classifier.py  enhanced_ai_classifier.py  filedownloader.cpp  filedownloader.h  icon.rc  imagesearcher.cpp  imagesearcher.h  main.cpp  main.qml  object_detector.py  opencvtest.cpp  opencvtest.h  qml.qrc  reverseimagesearch.cpp  reverseimagesearch.h  simpledb.cpp  simpledb.h
